fix: TryItNow code sample spacing is inconsistent (#137)
* fix: use JSON.Stringify to ensure spacing is intact

* fix: manually serialize TryItNow defaultValue to preserve spacing

* update examples

--- a/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
@@ -94,29 +94,7 @@ TypeScript
   id="operation-embeddings_v1_embeddings_post+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.embeddings.create({
-    model: "mistral-embed",
-    inputs: [
-      "Embed this sentence.",
-      "As well as this one.",
-    ],
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.embeddings.create({\n    model: \"mistral-embed\",\n    inputs: [\n      \"Embed this sentence.\",\n      \"As well as this one.\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
