--- a/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
@@ -95,23 +95,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-list_models_v1_models_get+code-samples+typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.list();
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.list();\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -3247,25 +3231,7 @@ TypeScript
   id="operation-retrieve_model_v1_models_model_id_get+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.retrieve({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.retrieve({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -6351,25 +6317,7 @@ TypeScript
   id="operation-delete_model_v1_models_model_id_delete+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.delete({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.delete({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -6704,26 +6652,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.update({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-    updateFTModelIn: {},
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.update({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n    updateFTModelIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -10395,25 +10324,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.archive({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.archive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -10792,25 +10703,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.unarchive({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.unarchive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
