--- a/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
@@ -86,23 +86,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_list_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.agents.list({});
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.list({});\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -1434,26 +1418,7 @@ TypeScript
   id="operation-agents_api_v1_agents_create_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.agents.create({
-    model: "LeBaron",
-    name: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.create({\n    model: \"LeBaron\",\n    name: \"<value>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -3759,25 +3724,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-agents_api_v1_agents_get_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.agents.get({
-    agentId: "<id>",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.get({\n    agentId: \"<id>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -5051,26 +4998,7 @@ TypeScript
   id="operation-agents_api_v1_agents_update_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.agents.update({
-    agentId: "<id>",
-    agentUpdateRequest: {},
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.update({\n    agentId: \"<id>\",\n    agentUpdateRequest: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -7422,26 +7350,7 @@ TypeScript
   id="operation-agents_api_v1_agents_update_version_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.agents.updateVersion({
-    agentId: "<id>",
-    version: 157995,
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.updateVersion({\n    agentId: \"<id>\",\n    version: 157995,\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
