--- a/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
@@ -88,23 +88,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-list_models_v1_models_get_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.list();
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.list();\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -1241,25 +1225,7 @@ TypeScript
   id="operation-retrieve_model_v1_models_model_id_get_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.retrieve({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.retrieve({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -2428,25 +2394,7 @@ TypeScript
   id="operation-delete_model_v1_models_model_id_delete_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.delete({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.delete({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -2684,26 +2632,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.update({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-    updateFTModelIn: {},
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.update({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n    updateFTModelIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -3969,25 +3898,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.archive({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.archive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -4187,25 +4098,7 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.models.unarchive({
-    modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.unarchive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
