--- a/examples/docusaurus/mistral/docs/api/endpoint/batch.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/batch.mdx
@@ -98,23 +98,7 @@ TypeScript
   id="operation-jobs_api_routes_batch_get_batch_jobs+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.batch.jobs.list({});
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.list({});\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -1945,28 +1929,7 @@ TypeScript
   id="operation-jobs_api_routes_batch_create_batch_job+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.batch.jobs.create({
-    inputFiles: [
-      "fe3343a2-3b8d-404b-ba32-a78dede2614a",
-    ],
-    endpoint: "/v1/classifications",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.create({\n    inputFiles: [\n      \"fe3343a2-3b8d-404b-ba32-a78dede2614a\",\n    ],\n    endpoint: \"/v1/classifications\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -3978,25 +3941,7 @@ TypeScript
   id="operation-jobs_api_routes_batch_get_batch_job+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.batch.jobs.get({
-    jobId: "4017dc9f-b629-42f4-9700-8c681b9e7f0f",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.get({\n    jobId: \"4017dc9f-b629-42f4-9700-8c681b9e7f0f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -5600,25 +5545,7 @@ TypeScript
   id="operation-jobs_api_routes_batch_cancel_batch_job+code-samples+typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.batch.jobs.cancel({
-    jobId: "4fb29d1c-535b-4f0a-a1cb-2167f86da569",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.cancel({\n    jobId: \"4fb29d1c-535b-4f0a-a1cb-2167f86da569\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
