--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -101,29 +101,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-ocr_v1_ocr_post+code-samples+typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.ocr.process({
-    model: "CX-9",
-    document: {
-      documentUrl: "https://upset-labourer.net/",
-      type: "document_url",
-    },
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.ocr.process({\n    model: \"CX-9\",\n    document: {\n      documentUrl: \"https://upset-labourer.net/\",\n      type: \"document_url\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
