--- a/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/page.mdx
@@ -81,23 +81,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_list_v1_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.libraries.list();
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.list();\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -520,25 +504,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_create_v1_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.libraries.create({
-    name: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.create({\n    name: \"<value>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -981,25 +947,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_get_v1_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.libraries.get({
-    libraryId: "d0d23a1e-bfe5-45e7-b7bb-22a4ea78d47f",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.get({\n    libraryId: \"d0d23a1e-bfe5-45e7-b7bb-22a4ea78d47f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -1403,26 +1351,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_update_v1_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.libraries.update({
-    libraryId: "e01880c3-d0b5-4a29-8b1b-abdb8ce917e4",
-    libraryInUpdate: {},
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.update({\n    libraryId: \"e01880c3-d0b5-4a29-8b1b-abdb8ce917e4\",\n    libraryInUpdate: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
@@ -1887,25 +1816,7 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_delete_v1_code-samples_typescript">
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.beta.libraries.delete({
-    libraryId: "6cad0b6e-fd2e-4d11-a48b-21d30fb7c17a",
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.delete({\n    libraryId: \"6cad0b6e-fd2e-4d11-a48b-21d30fb7c17a\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
