--- a/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
@@ -85,31 +85,7 @@ TypeScript
   id="operation-chat_completion_v1_chat_completions_post_code-samples_typescript"
 >
 
-<TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
-  defaultValue={`import { Mistral } from "@mistralai/mistralai";
-
-const mistral = new Mistral({
-  apiKey: "MISTRAL_API_KEY",
-});
-
-async function run() {
-  const result = await mistral.chat.complete({
-    model: "mistral-small-latest",
-    messages: [
-      {
-        content: "Who is the best French painter? Answer in one short sentence.",
-        role: "user",
-      },
-    ],
-  });
-
-  console.log(result);
-}
-
-run();
-`}
-/>
+<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.chat.complete({\n    model: \"mistral-small-latest\",\n    messages: [\n      {\n        content: \"Who is the best French painter? Answer in one short sentence.\",\n        role: \"user\",\n      },\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
 
 </SectionContent>
 
